add to nested FilterSet operator AND and OR